Can now add customized input